    - Added Radon.
    - Added the final tier of circuits, which'll unlock the most powerful machines and recipes for you to use.
    - Added the Electronic laser etcher - which is required to make purple circuits and can produce all breadboard recipes.
    - Added the YAG (Yttrium Aluminium Garnet) laser, which is used in the electronic laser etcher.
    - Added new achievements: Legacy code, 

  Changes:
    - Changed vanilla rocket fuel into Solid rocket fuel.
    - Changed rocket fuel's acceleration modifier to 250%.
    - Changed rocket fuel's top speed modifier to 500%.
    - Changed rocket fuels fuel value to 25MJ.
    - Changed ruby/sapphire laser heads into modules for the electronic laser etcher.
    - Removed Jesus Marie, they're minerals! achievement.
    - Changed rocket fuels recipe to match what it actually should be.
    - Changed rocket fuel to have a stack size of 100.
    - Moved rocket control units into their correct subgroup.

---------------------------------------------------------------------------------------------------
Version: 0.7.000
Date: 2025-12-07
  The 2 months? you are insane Update:

  Additions:
    - Added Osmium.
    - Added Iridium.
    - Added Tantalum.
    - Added Niobium.
    - Added Selenium.
    - Added Technectium.
    - Added Dubnium.
    - Added Rhenium.
    - Added Rhodium.
    - Added Ruthenium.
    - Added Inconel 625! its current use is as a new type of heating coil, which is the only coil that can add productivity.
    - Finally added nitric acid! unlocked in A-ATM science so i can actually use it for anything, it will replace some recipes use of nitrogen/fluids.
    - Also added aqua regia, which is why nitric acid even got added! it was now or when i got to 0.8/0.9, so
    - Finally gave science its own tab! because god knows im not slowing down on unique science items and recipes.